update and unified version code property