@@ -3,7 +3,7 @@
     <parent>
         <artifactId>forge</artifactId>
         <groupId>forge</groupId>
-        <version>1.6.65-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -50,86 +50,6 @@
                     <target>17</target>
                 </configuration>
             </plugin>
-
-            <plugin>
-                    <groupId>com.akathist.maven.plugins.launch4j</groupId>
-                    <artifactId>launch4j-maven-plugin</artifactId>
-                    <version>2.5.1</version>
-                    <executions>
-                        <!--extra-->
-                        <execution>
-                            <id>l4j-adv-editor</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>launch4j</goal>
-                            </goals>
-                            <configuration>
-                                <headerType>gui</headerType>
-                                <outfile>${project.build.directory}/forge-adventure-editor.exe</outfile>
-                                <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
-                                <dontWrapJar>true</dontWrapJar>
-                                <errTitle>forge</errTitle>
-                                <downloadUrl>https://bell-sw.com/pages/downloads/#jdk-17-lts</downloadUrl>
-                                <icon>src/main/config/forge-adventure-editor.ico</icon>
-                                <classPath>
-                                    <mainClass>forge.adventure.Main</mainClass>
-                                    <addDependencies>false</addDependencies>
-                                    <preCp>anything</preCp>
-                                </classPath>
-                                <jre>
-                                    <minVersion>17</minVersion>
-                                    <requiresJdk>true</requiresJdk>
-                                    <maxHeapSize>4096</maxHeapSize>
-                                    <opts>
-                                        <opt>-Dfile.encoding=UTF-8</opt>
-                                        <opt>--add-opens java.base/java.lang=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.math=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.nio=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/sun.nio.ch=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.util=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.text=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/java.awt=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/java.awt.font=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/java.awt.image=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/java.awt.color=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/javax.swing=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/javax.swing.border=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/javax.swing.event=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/sun.swing=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.desktop/java.beans=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</opt>
-                                        <opt>--add-opens java.base/java.net=ALL-UNNAMED</opt>
-                                        <opt>-Dio.netty.tryReflectionSetAccessible=true</opt>
-                                    </opts>
-                                </jre>
-                                <versionInfo>
-                                    <fileVersion>
-                                        1.0.0.0
-                                    </fileVersion>
-                                    <txtFileVersion>
-                                        1.0.0.0
-                                    </txtFileVersion>
-                                    <fileDescription>Forge</fileDescription>
-                                    <copyright>Forge</copyright>
-                                    <productVersion>
-                                        1.0.0.0
-                                    </productVersion>
-                                    <txtProductVersion>
-                                        1.0.0.0
-                                    </txtProductVersion>
-                                    <productName>forge-adventure-editor</productName>
-                                    <internalName>forge-adventure-editor</internalName>
-                                    <originalFilename>forge-adventure-editor.exe</originalFilename>
-                                </versionInfo>
-                            </configuration>
-                        </execution>
-                        <!--extra-->
-                    </executions>
-            </plugin>
-
             <plugin>
                 <groupId>com.google.code.maven-replacer-plugin</groupId>
                 <artifactId>replacer</artifactId>
